# integral-revolution

./: .gitignore  README.md  README.pt-br.md  pyproject.toml
src/: cylinder.py  disc.py  lathe.py
